--- a/mobile.css
+++ b/mobile.css
@@ -19,14 +19,14 @@
       }
       
       .fullCard {
-        width: 60%;
+        width: 78%;
         border: 1px solid #ccc;
         border-radius: 5px;
-        margin: 10px 51px;
+        margin: 10px 20px;
         padding: 4px;
         opacity: 0.7;
         margin-bottom: 5%;
-        margin-: 5%;
+        margin-top: 5%;
       }
     .fullCard img {
         opacity: 1;
@@ -107,12 +107,10 @@
      .content{
       width: 60%;
       float :left;
-      /* position: center; */
         width: auto;
         text-align: left;
-    
-    
     }
+    
     
      h3{
       /* font-family: Arial, "Helvetica Neue", Helvetica, sans-serif; */
@@ -141,7 +139,7 @@
       color: black;
       text-align: center;
      }
-    
+
      .work{
       font-size: 18px;
       letter-spacing: 1px;
@@ -151,15 +149,14 @@
       margin-right: 0px;
       margin-top: 0px;
       visibility: visible;
-      padding-left: 20px;
-      text-align: center;
+      padding-left: 0px;
+      text-align: left;
      }
     
     #bottom{
       color: whitesmoke;
       padding-bottom: 60px;
     
-    }
-    
+    } 
  }
 
